[tool.black]
target-version = ['py36', 'py37', 'py38']

[tool.coverage.run]
branch = true
source = ["securemailbox"]

[tool.poetry]
name = "api"
version = "0.8.0"
description = ""
authors = [
  "Andrew Bespaly <abespaly2@pdx.edu>", 
  "Cameron Pyne <campyne@pdx.edu>", 
  "Dajun Gu <gdajun@pdx.edu>", 
  "Nicholai Venetucci <npv2@pdx.edu>", 
  "Joseph Starr <starr5@pdx.edu>", 
  "Thomas Honnell <thonnell@pdx.edu>", 
  "samgomena <samgomena@protonmail.com>"
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
flask = "*"
flask-sqlalchemy = "*"
flask-migrate = "*"
psycopg2 = "*"
uwsgi = "*"
flask-swagger = "*"
flask-swagger-ui = "*"
flask-cors = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
coverage = {extras = ["toml"], version = "^5.1"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
